# unipack

./: .browserslistrc  .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  components.json  flatbuffer.Dockerfile  go.mod  go.sum  main.rs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.spec.json  viewer.Dockerfile
app/: layout.tsx  not-found.tsx  page.tsx
cmd/: main.go
cmd/cli/: main.go
cmd/collector/: main.go  route.go  route_test.go
cmd/lorem/: main.go
fixture/: extra-lorem.txt  message.fbs  msgs.txt
pkg/collector/: close.go  connect.go  context.go  disconnect.go  error.go  genid.go  manager.go  ping.go  route.go  route_test.go  storage.go  util.go
pkg/driver/: context.go  mechanic_test.go  message.go  socket.go  stack.go
pkg/fbgen-rust/: Cargo.toml
pkg/fbgen-rust/src/: lib.rs
pkg/stat/: close.go  connect.go  context.go  disconnect.go  error.go  genid.go  manager.go  ping.go  route.go  route_test.go  storage.go  util.go
pkg/uni/: context.go  exec.go  file.go  files-map.go  root.go  tar-file.go  tar-file_test.go  util.go
pkg/viewer/: Cargo.toml  index.html
pkg/viewer/src/: jsxcmp.rs  lib.rs  wsclient.rs
script/: gen-term-msgs.sh  run-test.sh
viewer/: Cargo.toml
viewer/src/: ansi.rs  jsxcmp.rs  wsclient.rs
