[package]
name = "fbgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
run = []
serde = []
std = [ ]

[dependencies]
flatbuffers = "25.2.10"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [ ]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[lints]
workspace = true
