[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
run = []
serde = ["dep:serde", "dep:serde_test", "dep:serde_json", "dep:serde-json-core"]
std = [
	"wasm-bindgen/std",
	"js-sys/std",
	"web-sys/std",
]

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
crypto-common = "0.1.6"
fancy-regex = "0.14.0"
gloo = "0.11.0"
js-sys = "0.3.77"
md-5 = "0.10.6"
mini-moka = { git = "https://github.com/xmhscratch/mini-moka", branch = "main" }
once_cell = "1.21.3"
rand = "0.8.5"
serde = { version = "1", optional = true, default-features = false, features = ["alloc"] }
serde_json = { version = "1", optional = true, default-features = false, features = ["alloc"] }
serde_test = { version = "1", optional = true, default-features = false }
serde-json-core = { version = "0.6", optional = true, default-features = false }
time = { version = "0.3", default-features = false, features = ["serde", "wasm-bindgen"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4", default-features = false }
yew = { version = "0.21.0", features = ["csr"] }
flatbuffers = "25.2.10"
fbgen = { path = "../fbgen-rust" }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "BinaryType",
    "Blob",
    "Document",
    "Element",
    "ErrorEvent",
    "FileReader",
    "HtmlHeadElement",
    "MessageEvent",
    "Node",
    "ProgressEvent",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "WebSocket",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[lints]
workspace = true
